# serializer version: 1
# name: test_function_jacobian_checker_error_shape
  'The Jacobian matrix computed by sin has a wrong shape; expected (1,), got (1, 2).'
# ---
# name: test_function_jacobian_checker_error_step
  'FunctionJacobianChecker does not support step=None.'
# ---
# name: test_wrong_step[centered_differences-complex]
  'Inconsistent step size, expected 3 got 2.'
# ---
# name: test_wrong_step[centered_differences-float]
  'Inconsistent step size, expected 3 got 2.'
# ---
# name: test_wrong_step[finite_differences-complex]
  'Inconsistent step size, expected 3 got 2.'
# ---
# name: test_wrong_step[finite_differences-float]
  'Inconsistent step size, expected 3 got 2.'
# ---
